--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <p class="attribution text-white text-center">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge"  class="text-success"target="_blank">Frontend Mentor</a>. 
-            Coded by <a href="#" class="text-success">MostafaElkhateeb</a>.
+            Coded by <a href="https://github.com/melkhateeb193" class="text-success">MostafaElkhateeb</a>.
           </p>
         </div>
     </footer>
